jiramediator/src/main/deployment/jiramediator-securitygroup.json
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Description":"Security Groups Stack",
   "Parameters":{
      "VPC":{
         "Description":"VPC id",
         "Type":"String"
      },
      "SystemName":{
         "Default":"Jira Mediator Test",
         "Description":"System Name",
         "Type":"String"
      }
   },
   "Resources":{
      "SecurityGroupApp":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"CentralStorage",
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "SourceSecurityGroupId":{
                     "Ref":"SecurityGroupELB"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "SourceSecurityGroupId":{
                     "Ref":"SecurityGroupELB"
                  }
               }
            ],
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Join":[
                        "-",
                        [
                           {
                              "Ref":"SystemName"
                           },
                           "App"
                        ]
                     ]
                  }
               }
            ]
         }
      },
      "SecurityGroupELB":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":{
               "Ref":"SystemName"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "CidrIp":"0.0.0.0/0"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"0.0.0.0/0"
               }
            ],
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Application",
                  "Value":{
                     "Ref":"AWS::StackId"
                  }
               },
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Join":[
                        "-",
                        [
                           {
                              "Ref":"SystemName"
                           },
                           "Elb"
                        ]
                     ]
                  }
               }
            ]
         }
      },
      "SecurityGroupEcache":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Elasticache Security Group",
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"11211",
                  "ToPort":"11211",
                  "SourceSecurityGroupId":{
                     "Ref":"SecurityGroupApp"
                  }
               }
            ],
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Application",
                  "Value":{
                     "Ref":"AWS::StackId"
                  }
               },
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Join":[
                        "-",
                        [
                           {
                              "Ref":"SystemName"
                           },
                           "Elasticache"
                        ]
                     ]
                  }
               }
            ]
         }
      }
   },
   "Outputs":{
      "SecurityGroupAppId":{
         "Value":{
            "Fn::GetAtt":[
               "SecurityGroupApp",
               "GroupId"
            ]
         }
      },
      "SecurityGroupELBId":{
         "Value":{
            "Fn::GetAtt":[
               "SecurityGroupELB",
               "GroupId"
            ]
         }
      },
      "SecurityGroupEcacheId":{
         "Value":{
            "Fn::GetAtt":[
               "SecurityGroupEcache",
               "GroupId"
            ]
         }
      }
   }
}
